adicionado login e logout no swagger
